# kromer2

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  build.rs
.github/workflows/: build.yml  ghcr.yml
.zed/: tasks.json
migrations/: 20250420170945_initial.sql  20250710192609_add_hash_column.sql  20250711191746_change_timestamp_type.sql  20250712132527_add_transaction_type_enum.sql  20250713170031_wallet_owner_field_on_players.sql  20250717161819_create_serverwelf_wallet.sql  20250719113426_add_names_to_transactions.sql  20250819200728_unique_name_index.sql
src/: database.rs  guards.rs  lib.rs  main.rs
src/database/: name.rs  paginated.rs  player.rs  transaction.rs  wallet.rs
src/errors/: krist.rs  mod.rs  name.rs  player.rs  transaction.rs  wallet.rs  websocket.rs
src/errors/krist/: address.rs  generic.rs  name.rs  transaction.rs  websockets.rs
src/models/: addresses.rs  auth.rs  misc.rs  mod.rs  motd.rs  names.rs  transactions.rs  websockets.rs
src/models/krist/: addresses.rs  blocks.rs  misc.rs  mod.rs  motd.rs  transactions.rs  websockets.rs
src/models/krist/webserver/: lookup.rs  search.rs
src/models/krist/webserver/lookup/: addresses.rs  names.rs  transactions.rs
src/models/kromer/: mod.rs  responses.rs  wallets.rs
src/models/webserver/lookup/: addresses.rs  names.rs  transactions.rs
src/routes/: mod.rs
src/routes/internal/: mod.rs  wallet.rs  ws.rs
src/routes/krist/: lookup.rs  misc.rs  mod.rs  names.rs  transactions.rs  wallet.rs  ws.rs
src/routes/krist/lookup/: addresses.rs
src/routes/v1/: mod.rs  wallet.rs  ws.rs
src/utils/: crypto.rs  mod.rs  validation.rs
src/websockets/: errors.rs  handler.rs  mod.rs
src/websockets/routes/: addresses.rs  auth.rs  me.rs  mod.rs  subscriptions.rs  transactions.rs
src/websockets/types/: common.rs  mod.rs
src/websockets/utils/: make_url.rs
