[package]
name = "maria-kromer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "chrono",
    "macros",
    "rust_decimal",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
