[package]
name = "kromer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = { version = "0.7.1", default-features = false }
actix-web = { version = "4.11.0", default-features = false, features = [
    "macros",
    "compress-brotli",
    "compress-gzip",
    "cookies",
    "http2",
    "unicode",
    "compat",
] }
actix-ws = { version = "0.3.0", default-features = false }
async-trait = "0.1.88"
bytestring = "1.4.0"
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
hex = "0.4.3"
once_cell = "1.21.3"
rand = "0.9.1"
regex = "1.11.1"
rust_decimal = { version = "1.37.2", features = ["macros", "serde-float"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "macros",
    "rust_decimal",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
